# wingpanel-indicator-nordvpn

./: .gitignore  README.md  meson.build
src/: Indicator.vala  InfoBar.vala  NordVPN.vala  PopOverWidget.vala  RevealerSwitch.vala  ServersTreeView.vala  ServersTreeWidget.vala  SettingsView.vala
